# Traffic-Light-Controller-with-CppUTest

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
ci-cd-tools/: Dockerfile
include/: main.h  traffic_light.h
src/: main.cpp  traffic_light.cpp
